src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]

post-map configures:
size: 1264 × 704, bounds: 800 × 600, states: []
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
